ATLAS-1110: make duplicate button as icon

--- a/frontend/src/app/core/components/button/atlas-button.component.html
+++ b/frontend/src/app/core/components/button/atlas-button.component.html
@@ -5,8 +5,9 @@
     [disabled]="disabled"
     [type]="submitButton ? 'submit' : 'button'"
     attr.data-cy="{{ buttonDataCy }}"
+    title="{{ title | translate }}"
   >
     {{ buttonText | translate }}
-    <ng-container #rightIcon *ngTemplateOutlet="rightIcon"> </ng-container>
+    <ng-container #rightIcon *ngTemplateOutlet="rightIcon"></ng-container>
   </button>
 </div>
