--- a/frontend/src/app/core/components/table/table.component.html
+++ b/frontend/src/app/core/components/table/table.component.html
@@ -95,7 +95,7 @@
               [buttonType]="column.button.buttonType"
               [disabled]="column.button.disabled"
               buttonDataCy="{{ column.button.buttonType }}"
-              buttonText="{{ column.button.label }}"
+              title="{{ column.button.title }}"
               wrapperStyleClass="text-align-center"
             >
               <ng-template #rightIcon>
