--- a/frontend/src/styles/atlas-components/_atlas-button.scss
+++ b/frontend/src/styles/atlas-components/_atlas-button.scss
@@ -47,6 +47,29 @@ button.footer-btn {
   }
 }
 
+.atlas-icon-btn {
+  border: none;
+  background-color: unset;
+  color: variables.$primary-500;
+  font-weight: 600;
+  font-size: 24px;
+
+  &:hover:not(:disabled) {
+    //background-color: variables.$gray-500;
+  }
+
+  &:disabled {
+    color: variables.$gray-400;
+    border-color: variables.$gray-400;
+  }
+
+  i {
+    &:hover:not(:disabled) {
+      color: variables.$primary-600;
+    }
+  }
+}
+
 .primary-color-btn {
   background-color: variables.$primary-500;
   color: variables.$white;
