Fix YearOptions and edit button visibility on planned

--- a/frontend/src/app/pages/tth/overview-detail/overview-detail.component.html
+++ b/frontend/src/app/pages/tth/overview-detail/overview-detail.component.html
@@ -118,6 +118,7 @@
           applicationType="TIMETABLE_HEARING"
           buttonDataCy="addNewTimetableHearing"
           buttonText="TTH.BUTTON.ADD_NEW_TIMETABLE_HEARING"
+          buttonStyleClass="atlas-raised-button mat-mdc-raised-button"
           buttonType="supervisorButton"
           wrapperStyleClass="text-align-end"
         >
