ATLAS-1245: Writer Button display

--- a/frontend/src/app/pages/tth/overview-detail/overview-detail.component.html
+++ b/frontend/src/app/pages/tth/overview-detail/overview-detail.component.html
@@ -88,10 +88,12 @@
         <atlas-spacer height="15px"></atlas-spacer>
         <atlas-button
           (buttonClicked)="addNewStatement()"
+          [canton]="cantonShort"
+          [disabled]="isCheckBoxModeActive"
           applicationType="TIMETABLE_HEARING"
           buttonDataCy="addNewStatement"
           buttonText="TTH.BUTTON.ADD_NEW_STATEMENT"
-          buttonType="createCheckingPermission"
+          buttonType="cantonWritePermission"
           wrapperStyleClass="text-align-end"
         >
         </atlas-button>
