--- a/frontend/src/app/core/components/table/table.component.html
+++ b/frontend/src/app/core/components/table/table.component.html
@@ -51,7 +51,7 @@
             {{ format(column, value[column.value]) }}
           </td>
         </div>
-        <div *ngIf="column.dropdown && !column.checkbox && !column.button">
+        <div *ngIf="column.dropdown">
           <td
             *matCellDef="let value"
             [title]="showTitle(column, value[column.value])"
@@ -69,7 +69,7 @@
             ></atlas-select>
           </td>
         </div>
-        <div *ngIf="column.checkbox && !column.dropdown && !column.button">
+        <div *ngIf="column.checkbox">
           <td
             (click)="stopPropagation($event)"
             *matCellDef="let row"
@@ -82,7 +82,7 @@
             ></mat-checkbox>
           </td>
         </div>
-        <div *ngIf="column.button && !column.checkbox && !column.dropdown">
+        <div *ngIf="column.button">
           <td
             (click)="stopPropagation($event)"
             *matCellDef="let row"
