ATLAS-1231: tth e2e WIP

--- a/frontend/src/app/pages/tth/overview-tab/overview-tab.component.html
+++ b/frontend/src/app/pages/tth/overview-tab/overview-tab.component.html
@@ -4,6 +4,7 @@
       (click)="clickOnTab(tab)"
       *ngFor="let tab of TABS"
       [active]="activeTab === tab"
+      [attr.data-cy]="'tth-tab-' + tab.link"
       [routerLink]="tab.link"
       class="font-bold-xl"
       mat-tab-link
