ATLAS-1234: tth e2e WIP

--- a/frontend/src/app/core/components/table/table.component.html
+++ b/frontend/src/app/core/components/table/table.component.html
@@ -38,6 +38,7 @@
               (change)="toggleAll()"
               (click)="$event.stopPropagation()"
               [checked]="isAllSelected()"
+              data-cy="tableCheckboxAll"
             ></mat-checkbox>
           </div>
         </th>
