ATLAS-1246: Improve size and style of dialog.

--- a/frontend/src/app/pages/tth/new-timetable-hearing-year-dialog/new-timetable-hearing-year-dialog.component.html
+++ b/frontend/src/app/pages/tth/new-timetable-hearing-year-dialog/new-timetable-hearing-year-dialog.component.html
@@ -28,7 +28,7 @@
     >
     </atlas-select>
 
-    <div>
+    <div class="pb-3 mb-3">
       <form-date-range
         controlNameFrom="hearingFrom"
         controlNameTo="hearingTo"
