ATLAS-1155: code review and scroll on top when opening statement

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -14,7 +14,7 @@
         </mat-nav-list>
       </mat-sidenav>
       <mat-sidenav-content [class.content-menu-closed]="!sideNavOpened">
-        <div class="full-height">
+        <div id="scrollbar-content-container" class="full-height">
           <app-loading-spinner [isLoading]="loadingSpinnerService.isLoading" [fullScreen]="true">
           </app-loading-spinner>
           <router-outlet></router-outlet>
