--- a/frontend/src/app/pages/tth/statement/statement-detail.component.html
+++ b/frontend/src/app/pages/tth/statement/statement-detail.component.html
@@ -32,7 +32,7 @@
               [options]="YEAR_OPTIONS"
               [required]="true"
               controlName="timetableYear"
-              dataCy="timetableYear"
+              dataCy="selecTthYear"
               label="TTH.SELECT_YEAR"
             >
             </atlas-select>
