--- a/frontend/src/app/pages/tth/overview-detail/overview-detail.component.html
+++ b/frontend/src/app/pages/tth/overview-detail/overview-detail.component.html
@@ -140,7 +140,7 @@
       [checkBoxSelection]="selectedCheckBox"
       [tableColumns]="tableColumns"
       [tableData]="timeTableHearingStatements"
-      [tableFilterConfig]="TABLE_FILTER_CONFIG"
+      [tableFilterConfig]="tableFilterConfig"
       [totalCount]="totalCount$"
       data-cy="ttfn"
     >
