--- a/frontend/src/app/core/components/table-filter/table-filter.component.html
+++ b/frontend/src/app/core/components/table-filter/table-filter.component.html
@@ -1,20 +1,19 @@
 <div class="d-flex flex-wrap">
   <div *ngFor="let row of filterConfigurations; let rowIndex = index" class="search-row">
     <ng-container *ngFor="let filterConfig of row; let filterConfigIndex = index">
-      <!--      search field -->
       <div
-        *ngIf="filterConfig | filterTypeGuard : isChipSearch as chipSearch"
+        *ngIf="filterConfig | instanceOf : TableFilterChipClass as chipSearch"
         [class]="chipSearch.elementWidthCssClass"
         class="d-flex flex-column search-box"
       >
         <mat-label class="font-bold-lg">{{
           'COMMON.SEARCH.SEARCH_CRITERIA' | translate
         }}</mat-label>
-        <div [ngClass]="chipSearch.disabled! ? 'disabled' : ''" class="search-main-field mb-4">
+        <div [ngClass]="chipSearch.disabled ? 'disabled' : ''" class="search-main-field mb-4">
           <mat-chip-grid #chipList [disabled]="!!chipSearch.disabled">
             <mat-chip-row
-              (removed)="removeSearch(search, rowIndex, filterConfigIndex)"
-              *ngFor="let search of chipSearch.activeSearch"
+              *ngFor="let search of chipSearch.getActiveSearch()"
+              (removed)="chipSearch.removeSearch(search); emitSearch()"
               class="font-bold-sm"
             >
               {{ search }}
@@ -23,7 +22,7 @@
               </button>
             </mat-chip-row>
             <input
-              (matChipInputTokenEnd)="addSearch($event, rowIndex, filterConfigIndex)"
+              (matChipInputTokenEnd)="chipSearch.addSearchFromChipInputEvent($event); emitSearch()"
               [matChipInputFor]="chipList"
               attr.data-cy="table-filter-chip-search-{{ rowIndex }}-{{ filterConfigIndex }}"
               class="font-regular-base"
@@ -34,32 +33,31 @@
       </div>
 
       <div
-        *ngIf="filterConfig | filterTypeGuard : isSearchSelect as searchSelect"
+        *ngIf="filterConfig | instanceOf : TableFilterSearchSelectClass as searchSelect"
         [class]="searchSelect.elementWidthCssClass"
       >
         <bo-select
-          (boSelectionChanged)="multiSelectSearchChanged($event, rowIndex, filterConfigIndex)"
           *ngIf="searchSelect.searchType === 'BUSINESS_ORGANISATION'"
-          [formGroup]="searchForm"
+          (boSelectionChanged)="searchSelect.setActiveSearch($event); emitSearch()"
+          [formGroup]="searchSelect.formGroup!"
           [formModus]="false"
           controlName="businessOrganisation"
         >
         </bo-select>
         <ttfn-select
-          (ttfnSelectionChanged)="multiSelectSearchChanged($event, rowIndex, filterConfigIndex)"
           *ngIf="searchSelect.searchType === 'TIMETABLE_FIELD_NUMBER'"
+          (ttfnSelectionChanged)="searchSelect.setActiveSearch($event); emitSearch()"
           [disabled]="searchSelect.disabled!"
-          [formGroup]="searchForm"
+          [formGroup]="searchSelect.formGroup!"
           [formModus]="false"
           controlName="ttfnid"
         >
         </ttfn-select>
-
         <tu-select
-          (ttfnSelectionChanged)="multiSelectSearchChanged($event, rowIndex, filterConfigIndex)"
           *ngIf="searchSelect.searchType === 'TRANSPORT_COMPANY'"
+          (ttfnSelectionChanged)="searchSelect.setActiveSearch($event); emitSearch()"
           [disabled]="searchSelect.disabled!"
-          [formGroup]="searchForm"
+          [formGroup]="searchSelect.formGroup!"
           [formModus]="false"
           controlName="transportCompany"
         >
@@ -67,24 +65,24 @@
       </div>
 
       <div
-        *ngIf="filterConfig | filterTypeGuard : isMultiSelect as multiSelect"
+        *ngIf="filterConfig | instanceOf : TableFilterMultiSelectClass as multiSelect"
         [class]="multiSelect.elementWidthCssClass"
       >
         <atlas-select
-          (selectChanged)="multiSelectChanged($event, rowIndex, filterConfigIndex)"
+          (selectChanged)="multiSelect.setActiveSearch($event.value); emitSearch()"
           [additionalLabelspace]="false"
-          [disabled]="multiSelect.disabled!"
+          [disabled]="!!multiSelect.disabled"
           [label]="multiSelect.labelTranslationKey"
           [multiple]="true"
           [optionTranslateLabelPrefix]="multiSelect.typeTranslationKeyPrefix"
           [options]="multiSelect.selectOptions"
-          [value]="multiSelect.activeSearch"
+          [value]="multiSelect.getActiveSearch()"
           dataCy="table-filter-multi-select-{{ rowIndex }}-{{ filterConfigIndex }}"
         ></atlas-select>
       </div>
 
       <div
-        *ngIf="filterConfig | filterTypeGuard : isDateSelect as dateSelect"
+        *ngIf="filterConfig | instanceOf : TableFilterDateSelectClass as dateSelect"
         [class]="dateSelect.elementWidthCssClass"
       >
         <mat-label class="font-bold-lg">{{ 'COMMON.SEARCH.VALIDITY' | translate }}</mat-label>
@@ -92,7 +90,7 @@
         <div class="search-date-field">
           <div class="container-date-field">
             <input
-              (dateChange)="onDateChanged($event, rowIndex, filterConfigIndex)"
+              (dateChange)="dateSelect.setActiveSearch($event.value); emitSearch()"
               [formControl]="dateSelect.formControl"
               [matDatepicker]="picker"
               [max]="MAX_DATE"
