ATLAS-1231: reset checkbox selection, disable pagination when checkbox mode enabled

--- a/frontend/src/app/core/components/table/table.component.html
+++ b/frontend/src/app/core/components/table/table.component.html
@@ -135,6 +135,7 @@
 
   <mat-paginator
     (page)="pageChanged($event)"
+    [disabled]="checkBoxModeEnabled"
     [length]="totalCount"
     [pageIndex]="pageIndex"
     [pageSizeOptions]="pageSizeOptions"
