ATLAS-1258: wip: rebuilding table filter, todo: unit-tests

--- a/frontend/src/app/pages/bodi/business-organisations/business-organisation.component.html
+++ b/frontend/src/app/pages/bodi/business-organisations/business-organisation.component.html
@@ -7,6 +7,7 @@
   [totalCount]="totalCount$"
   [tableColumns]="tableColumns"
   [canEdit]="true"
+  [tableFilterConfig]="tableFilterConfig"
   (editElementEvent)="editVersion($event)"
   (tableChanged)="getOverview($event)"
   (tableInitialized)="getOverview($event)"
