--- a/frontend/src/app/pages/bodi/transport-companies/transport-companies.component.html
+++ b/frontend/src/app/pages/bodi/transport-companies/transport-companies.component.html
@@ -10,6 +10,7 @@
   [tableColumns]="tableColumns"
   [tableData]="transportCompanies"
   [totalCount]="totalCount"
+  [tableFilterConfig]="tableFilterConfig"
   data-cy="bodi-transport-companies"
 >
 </app-table>
