Fix Security Hotspots

--- a/frontend/src/app/pages/bodi/companies/detail/company-detail.component.html
+++ b/frontend/src/app/pages/bodi/companies/detail/company-detail.component.html
@@ -61,7 +61,7 @@
           fieldLabel="BODI.COMPANIES.URL"
         >
           <ng-template #customChildInputPostfixTemplate>
-            <a [attr.href]="prependHttp(form.value.url)" target="_blank">
+            <a [attr.href]="prependHttp(form.value.url)" target="_blank" rel="noopener">
               <link-icon></link-icon>
             </a>
           </ng-template>
