--- a/frontend/src/app/pages/lidi/sublines/detail/subline-detail.component.html
+++ b/frontend/src/app/pages/lidi/sublines/detail/subline-detail.component.html
@@ -89,7 +89,7 @@
             </form-search-select>
           </div>
           <div class="mainline-link d-flex flex-column">
-            <a [attr.href]="mainlineUrl()" target="_blank">
+            <a [attr.href]="mainlineUrl()" target="_blank" rel="noopener">
               <link-icon></link-icon>
             </a>
           </div>
