--- a/frontend/src/app/core/components/table/table.component.html
+++ b/frontend/src/app/core/components/table/table.component.html
@@ -15,6 +15,7 @@
     [matSortActive]="sortActive"
     [matSortDirection]="sortDirection"
     [matSortDisabled]="sortingDisabled"
+    aria-describedby="atlas-table"
     class="atlas-table"
     mat-table
     matSort
