--- a/frontend/src/app/pages/lidi/color-picker/rgb/rgb-picker.component.html
+++ b/frontend/src/app/pages/lidi/color-picker/rgb/rgb-picker.component.html
@@ -39,6 +39,7 @@
               ? 'assets/images/color-picker-inactive.svg'
               : 'assets/images/color-picker-active.svg'
           "
+          alt="color-picker"
         />
       </div>
       <app-atlas-field-error
