--- a/frontend/src/app/core/components/relation/relation.component.html
+++ b/frontend/src/app/core/components/relation/relation.component.html
@@ -4,39 +4,40 @@
 
 <div class="table-form-container">
   <table
-    matSort
-    mat-table
+    (matSortChange)="sortChanged($event)"
     [dataSource]="_records"
     [ngClass]="{ admin: editable }"
-    (matSortChange)="sortChanged($event)"
+    aria-describedby="relation-table"
     class="atlas-table"
+    mat-table
+    matSort
   >
     <ng-container *ngFor="let column of tableColumns" matColumnDef="{{ column.columnDef }}">
       <th
-        scope="col"
-        mat-header-cell
         *matHeaderCellDef
         [mat-sort-header]="column.columnDef!"
         class="font-bold-base color-primary-400 bordered-cell"
+        mat-header-cell
+        scope="col"
       >
         {{ column.headerTitle | translate }}
       </th>
-      <td mat-cell *matCellDef="let value" class="bordered-cell">
+      <td *matCellDef="let value" class="bordered-cell" mat-cell>
         {{ getValue(value, column) }}
       </td>
     </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="columnValues()"></tr>
+    <tr *matHeaderRowDef="columnValues()" mat-header-row></tr>
     <tr
-      mat-row
+      (click)="selectRecord(row)"
       *matRowDef="let row; columns: columnValues()"
       [ngClass]="{ 'selected-row': isRowSelected(row) && editable }"
-      (click)="selectRecord(row)"
+      mat-row
     ></tr>
 
-    <ng-template matNoDataRow
-      ><td class="mat-cell" colspan="100">{{ 'COMMON.NODATAFOUND' | translate }}</td></ng-template
-    >
+    <ng-template matNoDataRow>
+      <td class="mat-cell" colspan="100">{{ 'COMMON.NODATAFOUND' | translate }}</td>
+    </ng-template>
   </table>
 </div>
 
@@ -44,16 +45,16 @@
 
 <div *ngIf="editable">
   <button
-    [disabled]="editMode"
     (click)="editModeChanged.emit()"
+    [disabled]="editMode"
     class="atlas-primary-btn me-2"
     data-cy="add-relation-btn"
   >
     {{ addBtnNameTranslationKey | translate }}
   </button>
   <button
-    [disabled]="selectedIndex === -1"
     (click)="deleteRelation.emit()"
+    [disabled]="selectedIndex === -1"
     class="atlas-primary-btn"
     data-cy="delete-relation-btn"
   >
