--- a/frontend/src/app/core/form-components/tu-select/transport-company-select.component.html
+++ b/frontend/src/app/core/form-components/tu-select/transport-company-select.component.html
@@ -1,5 +1,5 @@
 <form-search-select
-  (changeTrigger)="ttfnSelectionChanged.emit($event)"
+  (changeTrigger)="tuSelectionChanged.emit($event)"
   (searchTrigger)="searchTransportCompany($event)"
   [bindValueInp]="valueExtraction"
   [controlName]="controlName"
