ATLAS-1175: Update length info in frontend

--- a/frontend/src/app/pages/ttfn/detail/timetable-field-number-detail.component.html
+++ b/frontend/src/app/pages/ttfn/detail/timetable-field-number-detail.component.html
@@ -45,7 +45,11 @@
           [fieldExamples]="[
             { label: 'FORM.FOR_EXAMPLE', translate: true },
             { label: 'Bern Bahnhof - Eigerplatz - Weissenbühl |', translate: false },
-            { label: 'FORM.MAX_CHARS', translate: true, arg: { key: 'numberOfChars', value: '50' } }
+            {
+              label: 'FORM.MAX_CHARS',
+              translate: true,
+              arg: { key: 'numberOfChars', value: '255' }
+            }
           ]"
           [formGroup]="form"
           controlName="description"
